--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
-  text-align: center;
   height: 100vh;
-  padding: 6em;
+  padding: 4em 12em;
   background-color: #282c34;
   color: #f5f5f5;
 }
@@ -9,6 +8,26 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.barcode{
+  transform: translateY(-100vh);
+}
+
+.codes{
+  width: fit-content;
+  margin-top: 2em;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
